# llama.haskell

./: .clangd  CHANGELOG.md  LICENSE  README.md  llama-haskell.cabal
app/: Main.hs
cbits/: llama-capi.c  llama-capi.h
scripts/: format.sh
src/AI/LanguageModel/: LLaMA.hs
src/AI/LanguageModel/GGML/: FFI.hsc
src/AI/LanguageModel/GGML/FFI/: Alloc.hsc  CUDA.hsc  MPI.hsc  Metal.hsc  OpenCL.hsc
src/AI/LanguageModel/LLaMA/: FFI.hsc  Parameters.hs
